# saf_gdelt

./: .gitignore  LICENSE  README.md  pull_request_template.md  pyproject.toml  setup.py
discursus_gdelt/: gdelt_miners.py  gdelt_mining_ops.py  gdelt_resources.py
discursus_gdelt.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
discursus_gdelt/miners/: gdelt_events_miner.zsh  gdelt_mentions_miner.zsh
dpf_gdelt.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
saf_gdelt/: gdelt_resource.py
saf_gdelt.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
